remove styles / checkbox

--- a/app/index.html
+++ b/app/index.html
@@ -164,7 +164,8 @@
                 <label class="page-contacts-form-item page-contacts-form-checkbox--wrapper">
                   <input type="checkbox" class="page-contacts-form-checkbox" required>
                   <span class="page-contacts-form-checkbox-fake"></span>
-                  <span class="page-contacts-form-checkbox-text">Согласие на обработку персональных данных</span>
+                  <a target="_blank" class="page-contacts-form-checkbox-text">Согласие на обработку персональных
+                    данных</a>
                 </label>
                 <button type="submit" class="page-contacts-form-btn">Отправить</button>
               </div>
