--- a/app/index.html
+++ b/app/index.html
@@ -161,12 +161,15 @@
                 <textarea class="page-contacts-form-item-input page-contacts-form-item-input--textarea"></textarea>
               </label>
               <div class="page-contacts-form-btns">
-                <label class="page-contacts-form-item page-contacts-form-checkbox--wrapper">
-                  <input type="checkbox" class="page-contacts-form-checkbox" required>
-                  <span class="page-contacts-form-checkbox-fake"></span>
-                  <a target="_blank" class="page-contacts-form-checkbox-text">Согласие на обработку персональных
+                <div class="page-contacts-form-checkbox-inner">
+                  <label class="page-contacts-form-item page-contacts-form-checkbox--wrapper">
+                    <input type="checkbox" class="page-contacts-form-checkbox" required>
+                    <span class="page-contacts-form-checkbox-fake"></span>
+                  </label>
+                  <a href="#" target="_blank" class="page-contacts-form-checkbox-text">Согласие на обработку
+                    персональных
                     данных</a>
-                </label>
+                </div>
                 <button type="submit" class="page-contacts-form-btn">Отправить</button>
               </div>
             </div>
