--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
       <div class="container container--page-contacts-map container--page-contacts-map1">
         <div class="page-contacts-map-content page-contacts-map-content--1" id="map2"></div>
         <div class="container">
-          <div class="row row--page-contacts-map">
+          <div class="page-contacts-row row--page-contacts-map">
             <div class="page-contacts-map-col page-contacts-map-col--1">
               <div class="page-contacts-map-inner page-contacts-map-inner--1">
                 <img src="./images/src/Biznes-park-Avia-Plaza.jpg" alt="Аравия Плаза"
@@ -64,7 +64,7 @@
       <div class="container container--page-contacts-map container--page-contacts-map2">
         <div class="page-contacts-map-content page-contacts-map-content--2" id="map"></div>
         <div class="container">
-          <div class="row row--page-contacts-map">
+          <div class="page-contacts-row row--page-contacts-map">
             <div class="page-contacts-map-col page-contacts-map-col--2">
               <div class="page-contacts-map-inner page-contacts-map-inner--2">
                 <img src="./images/src/DSC_2627.jpg" alt="Аравия Плаза"
@@ -118,8 +118,8 @@
         </button>
         <p class="page-contacts-form-title">для связи с нами <br>
           заполните форму ниже:</p>
-        <div class="row row--wrap">
-          <div class="page-contacts-form-col row row--wrap">
+        <div class="page-contacts-row row--wrap">
+          <div class="page-contacts-form-col page-contacts-row row--wrap">
             <div class="page-contacts-form-item-col">
               <label class="page-contacts-form-item">
                 <p class="page-contacts-form-item-title">Имя*</p>
