--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,8 @@
   <!-- <link rel="icon" href="img/favicon.png" /> -->
   <meta property="og:image" content="img/dest/preview.jpg" />
   <link rel="stylesheet" href="css/app.min.css" />
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 </head>
 
 <body>
@@ -106,108 +108,121 @@
         <p class="page-contacts-form-text">Пожалуйста, корректно заполните форму, чтобы мы могли оперативно с Вами
           связаться и максимально точно ответить на Ваши вопросы. Спасибо.
         </p>
-        <button class="page-contacts-form-btn page-contacts-form-btn--contacts" onclick="onToggleContactForm()">Написать
+        <button class="page-contacts-form-btn page-contacts-form-btn--contacts" data-toggle="modal"
+          data-target="#feedbackForm">Написать
           нам</button>
       </div>
     </section>
-    <section class="feedback-form-popup" id="feedbackForm">
-      <div class="feedback-form-popup-overlay" onclick="onToggleContactForm()"></div>
-      <form class="page-contacts-form">
-        <button type="button" class="page-contacts-form-btn-close" onclick="onToggleContactForm()">
-          <span class="visually-hidden">Закрыть</span>
-        </button>
-        <p class="page-contacts-form-title">для связи с нами <br>
-          заполните форму ниже:</p>
-        <div class="page-contacts-row row--wrap">
-          <div class="page-contacts-form-col page-contacts-row row--wrap">
-            <div class="page-contacts-form-item-col">
-              <label class="page-contacts-form-item">
-                <p class="page-contacts-form-item-title">Имя*</p>
-                <input type="text" class="page-contacts-form-item-input" required>
-              </label>
+    <section class="feedback-form-popup modal fade" tabindex="-1" role="dialog" style="display: none;"
+      aria-hidden="true" id="feedbackForm">
+      <!-- <div class="feedback-form-popup-overlay"></div> -->
+      <div class="page-contacts-form-wrapper modal-dialog" role="document">
+        <form class="page-contacts-form modal-content">
+          <button type="button" class="page-contacts-form-btn-close" data-dismiss="modal" aria-label="Close">
+            <span class="visually-hidden">Закрыть</span>
+          </button>
+          <p class="page-contacts-form-title">для связи с нами <br>
+            заполните форму ниже:</p>
+          <div class="page-contacts-row row--wrap">
+            <div class="page-contacts-form-col page-contacts-row row--wrap">
+              <div class="page-contacts-form-item-col">
+                <label class="page-contacts-form-item">
+                  <p class="page-contacts-form-item-title">Имя*</p>
+                  <input type="text" class="page-contacts-form-item-input" required>
+                </label>
+              </div>
+
+              <div class="page-contacts-form-item-col">
+                <label class="page-contacts-form-item">
+                  <p class="page-contacts-form-item-title">E-mail*</p>
+                  <input type="text" class="page-contacts-form-item-input" required>
+                </label>
+              </div>
+
+              <div class="page-contacts-form-item-col">
+                <label class="page-contacts-form-item">
+                  <p class="page-contacts-form-item-title">Контактный телефон*</p>
+                  <input type="text" class="page-contacts-form-item-input" id="phone">
+                </label>
+              </div>
+
+              <div class="page-contacts-form-item-col">
+                <label class="page-contacts-form-item">
+                  <p class="page-contacts-form-item-title">Тема обращения</p>
+                  <select class="page-contacts-form-item-input page-contacts-form-item-input--select">
+                    <option value="" selected> Заказ </option>
+                    <option value=""> option </option>
+                    <option value=""> option </option>
+                    <option value=""> option </option>
+                    <option value=""> option </option>
+                    <option value=""> option </option>
+                    <option value=""> option </option>
+                  </select>
+                </label>
+              </div>
+
+              <div class="page-contacts-form-item-col">
+                <label class="page-contacts-form-item">
+                  <p class="page-contacts-form-item-title">Номер заказа (если имеется): </p>
+                  <input type="text" class="page-contacts-form-item-input">
+                </label>
+              </div>
+
+              <div class="page-contacts-form-item-col">
+                <label class="page-contacts-form-item">
+                  <p class="page-contacts-form-item-title">Город</p>
+                  <select class="page-contacts-form-item-input page-contacts-form-item-input--select">
+                    <option value="" selected> Москва </option>
+                    <option value=""> option </option>
+                    <option value=""> option </option>
+                    <option value=""> option </option>
+                    <option value=""> option </option>
+                    <option value=""> option </option>
+                    <option value=""> option </option>
+                  </select>
+                </label>
+              </div>
             </div>
 
-            <div class="page-contacts-form-item-col">
+            <div class="page-contacts-form-col">
               <label class="page-contacts-form-item">
-                <p class="page-contacts-form-item-title">E-mail*</p>
-                <input type="text" class="page-contacts-form-item-input" required>
+                <p class="page-contacts-form-item-title">Ваше сообщение</p>
+                <textarea class="page-contacts-form-item-input page-contacts-form-item-input--textarea"></textarea>
               </label>
-            </div>
-
-            <div class="page-contacts-form-item-col">
-              <label class="page-contacts-form-item">
-                <p class="page-contacts-form-item-title">Контактный телефон*</p>
-                <input type="text" class="page-contacts-form-item-input" id="phone">
-              </label>
-            </div>
-
-            <div class="page-contacts-form-item-col">
-              <label class="page-contacts-form-item">
-                <p class="page-contacts-form-item-title">Тема обращения</p>
-                <select class="page-contacts-form-item-input page-contacts-form-item-input--select">
-                  <option value="" selected> Заказ </option>
-                  <option value=""> option </option>
-                  <option value=""> option </option>
-                  <option value=""> option </option>
-                  <option value=""> option </option>
-                  <option value=""> option </option>
-                  <option value=""> option </option>
-                </select>
-              </label>
-            </div>
-
-            <div class="page-contacts-form-item-col">
-              <label class="page-contacts-form-item">
-                <p class="page-contacts-form-item-title">Номер заказа (если имеется): </p>
-                <input type="text" class="page-contacts-form-item-input">
-              </label>
-            </div>
-
-            <div class="page-contacts-form-item-col">
-              <label class="page-contacts-form-item">
-                <p class="page-contacts-form-item-title">Город</p>
-                <select class="page-contacts-form-item-input page-contacts-form-item-input--select">
-                  <option value="" selected> Москва </option>
-                  <option value=""> option </option>
-                  <option value=""> option </option>
-                  <option value=""> option </option>
-                  <option value=""> option </option>
-                  <option value=""> option </option>
-                  <option value=""> option </option>
-                </select>
-              </label>
+              <div class="page-contacts-form-checkbox-inner">
+                <label class="page-contacts-form-item page-contacts-form-checkbox--wrapper">
+                  <input type="checkbox" class="page-contacts-form-checkbox" required>
+                  <span class="page-contacts-form-checkbox-fake"></span>
+                </label>
+                <a href="#" target="_blank" class="page-contacts-form-checkbox-text">Согласие на обработку
+                  персональных
+                  данных</a>
+              </div>
+              <div class="page-contacts-form-btns">
+                <div class="page-contacts-form-capcha">место для капчи</div>
+                <button type="submit" class="page-contacts-form-btn page-contacts-form-btn--submit">Отправить</button>
+              </div>
+              <div class="page-contacts-form-sub-text">
+                <span>* Обязательные для заполнения поля</span>
+              </div>
             </div>
           </div>
-
-          <div class="page-contacts-form-col">
-            <label class="page-contacts-form-item">
-              <p class="page-contacts-form-item-title">Ваше сообщение</p>
-              <textarea class="page-contacts-form-item-input page-contacts-form-item-input--textarea"></textarea>
-            </label>
-            <div class="page-contacts-form-checkbox-inner">
-              <label class="page-contacts-form-item page-contacts-form-checkbox--wrapper">
-                <input type="checkbox" class="page-contacts-form-checkbox" required>
-                <span class="page-contacts-form-checkbox-fake"></span>
-              </label>
-              <a href="#" target="_blank" class="page-contacts-form-checkbox-text">Согласие на обработку
-                персональных
-                данных</a>
-            </div>
-            <div class="page-contacts-form-btns">
-              <div class="page-contacts-form-capcha">место для капчи</div>
-              <button type="submit" class="page-contacts-form-btn page-contacts-form-btn--submit">Отправить</button>
-            </div>
-            <div class="page-contacts-form-sub-text">
-              <span>* Обязательные для заполнения поля</span>
-            </div>
-          </div>
-        </div>
-      </form>
+        </form>
+      </div>
     </section>
   </div>
 
   <script src="//api-maps.yandex.ru/2.1/?apikey=adfea7f6-bae5-4b78-8809-406a7947eb1b&amp;lang=ru_RU"></script>
   <script src="js/app.min.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script> -->
   <script>
     function init() {
       var mapCenter = {
